yaml/redis/depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: taas
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: docker.io/library/redis:latest
        imagePullPolicy: IfNotPresent
        command:
          - redis-server
          - "/redis-master/redis.conf"
        ports:
          - name: redis
            containerPort: 6379
        volumeMounts:
          - mountPath: /var/lib/redis
            name: data
          - mountPath: /redis-master



            name: config
        livenessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pvc
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
