yaml/redis/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: taas
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
